kubernetes/valinor/apps/database/cockroachdb/app/crdb-operator.yaml
# Copyright 2023 The Cockroach Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: cockroach-operator
  name: cockroach-operator-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: cockroach-operator
  name: cockroach-operator-webhook-service
  namespace: cockroach-operator-system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    app: cockroach-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cockroach-operator
  name: cockroach-operator-manager
  namespace: cockroach-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cockroach-operator
  template:
    metadata:
      labels:
        app: cockroach-operator
    spec:
      containers:
        - args:
            - -zap-log-level
            - info
          image: cockroachdb/cockroach-operator:v2.10.0
          imagePullPolicy: IfNotPresent
          name: cockroach-operator
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
      serviceAccountName: cockroach-operator-sa
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: cockroach-operator-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cockroach-operator-webhook-service
        namespace: cockroach-operator-system
        path: /mutate-crdb-cockroachlabs-com-v1alpha1-crdbcluster
    failurePolicy: Fail
    name: mcrdbcluster.kb.io
    rules:
      - apiGroups:
          - crdb.cockroachlabs.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - crdbclusters
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: cockroach-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cockroach-operator-webhook-service
        namespace: cockroach-operator-system
        path: /validate-crdb-cockroachlabs-com-v1alpha1-crdbcluster
    failurePolicy: Fail
    name: vcrdbcluster.kb.io
    rules:
      - apiGroups:
          - crdb.cockroachlabs.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - crdbclusters
    sideEffects: None
